# ROS2

./: README.md
install/: setup.sh
install/my_bot_description/share/my_bot_description/: package.sh  package.xml
install/my_robot/lib/my_robot/: cone_detector  starter_node  stopper_node
install/my_robot/share/my_robot/: package.sh  package.xml
install/my_robot/share/my_robot/launch/: view_robot.launch.py
install/my_robot/share/my_robot/urdf/: four_wheel_bot.xacro
install/my_robot/share/my_robot/world/: obstacle_world.world
install/py_pubsub/lib/py_pubsub/: number_publisher  square_subscriber
install/py_pubsub/share/py_pubsub/launch/: py_pubsub_launch.py
log/: latest_build
src/install/my_robot/share/my_robot/: package.sh
src/install/my_robot/share/my_robot/launch/: view_robot.launch.py
src/install/my_robot/share/my_robot/urdf/: four_wheel_bot.xacro
src/log/: latest_build
src/my_bot_description/: setup.py
src/my_bot_description/launch/: view_model.launch.py
src/my_bot_description/urdf/: bot.xacro
src/my_robot/: .gitignore  setup.py
src/my_robot/launch/: view_robot.launch.py
src/my_robot/my_robot/: stopper_node.py
src/my_robot/urdf/: robot.urdf
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: number_publisher.py
